fix sidebar on mobile

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -41,6 +41,7 @@
     .sidebar {
         background: none;
         margin-right: 0;
+        height: auto;
         &.open {
             background-color: $secondary-color;
         }
